@@ -19,14 +19,14 @@ import static org.junit.jupiter.api.Assertions.*;
 class CacheCredentialsMetaDataPopulatorTests {
 
     @Test
-    void verifyPasswordAsAuthenticationAttribute() {
+    void verifyPasswordAsAuthenticationAttribute() throws Throwable {
         val populator = new CacheCredentialsMetaDataPopulator();
         val credential = CoreAuthenticationTestUtils.getCredentialsWithSameUsernameAndPassword();
         val builder = DefaultAuthenticationBuilder.newInstance(CoreAuthenticationTestUtils.getAuthentication());
         populator.populateAttributes(builder, CoreAuthenticationTestUtils.getAuthenticationTransactionFactory().newTransaction(credential));
         val authn = builder.build();
         assertTrue(authn.getAttributes().containsKey(UsernamePasswordCredential.AUTHENTICATION_ATTRIBUTE_PASSWORD));
-        assertEquals(credential.toPassword(), authn.getAttributes().get(UsernamePasswordCredential.AUTHENTICATION_ATTRIBUTE_PASSWORD).get(0).toString());
+        assertEquals(credential.toPassword(), authn.getAttributes().get(UsernamePasswordCredential.AUTHENTICATION_ATTRIBUTE_PASSWORD).getFirst().toString());
     }
 
 }
