@@ -7,36 +7,28 @@ import org.apereo.cas.adaptors.duo.DuoSecurityUserAccountStatus;
 import org.apereo.cas.adaptors.duo.authn.DuoSecurityAuthenticationService;
 import org.apereo.cas.adaptors.duo.authn.DuoSecurityMultifactorAuthenticationProvider;
 import org.apereo.cas.authentication.CoreAuthenticationTestUtils;
-import org.apereo.cas.authentication.MultifactorAuthenticationPrincipalResolver;
-import org.apereo.cas.authentication.mfa.TestMultifactorAuthenticationProvider;
+import org.apereo.cas.authentication.MultifactorAuthenticationProvider;
 import org.apereo.cas.configuration.CasConfigurationProperties;
-import org.apereo.cas.configuration.model.support.mfa.duo.DuoSecurityMultifactorAuthenticationProperties;
 import org.apereo.cas.configuration.model.support.mfa.duo.DuoSecurityMultifactorAuthenticationRegistrationProperties;
 import org.apereo.cas.services.RegisteredServiceTestUtils;
-import org.apereo.cas.util.MockServletContext;
-import org.apereo.cas.util.spring.ApplicationContextProvider;
+import org.apereo.cas.util.MockRequestContext;
 import org.apereo.cas.web.flow.CasWebflowConstants;
 import org.apereo.cas.web.support.WebUtils;
-
-import lombok.SneakyThrows;
 import lombok.val;
 import org.apache.hc.core5.net.URIBuilder;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.parallel.Execution;
+import org.junit.jupiter.api.parallel.ExecutionMode;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.context.support.StaticApplicationContext;
-import org.springframework.mock.web.MockHttpServletRequest;
-import org.springframework.mock.web.MockHttpServletResponse;
-import org.springframework.webflow.context.servlet.ServletExternalContext;
+import org.springframework.boot.test.context.TestConfiguration;
+import org.springframework.context.annotation.Bean;
 import org.springframework.webflow.execution.Action;
 import org.springframework.webflow.execution.RequestContext;
-import org.springframework.webflow.test.MockRequestContext;
-
 import java.util.UUID;
-
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -46,59 +38,53 @@ import static org.mockito.Mockito.*;
  * @author Misagh Moayyed
  * @since 6.2.0
  */
-@SpringBootTest(classes = BaseDuoSecurityTests.SharedTestConfiguration.class,
-    properties = {
-        "cas.authn.mfa.duo[0].duo-secret-key=1234567890",
-        "cas.authn.mfa.duo[0].duo-application-key=abcdefghijklmnop",
-        "cas.authn.mfa.duo[0].duo-integration-key=QRSTUVWXYZ",
-        "cas.authn.mfa.duo[0].duo-api-host=theapi.duosecurity.com"
-    })
+@SpringBootTest(classes = {
+    DuoSecurityDetermineUserAccountActionTests.MultifactorTestConfiguration.class,
+    BaseDuoSecurityTests.SharedTestConfiguration.class
+}, properties = {
+    "cas.authn.mfa.duo[0].id=mfa-default",
+    "cas.authn.mfa.duo[0].duo-secret-key=cGKL1OndjtknbmVOWaFmisaghiNFEKXHxgXCJEBr",
+    "cas.authn.mfa.duo[0].duo-integration-key=DIZXVRQD3OMZ6XXMNFQ9",
+    "cas.authn.mfa.duo[0].duo-api-host=theapi.duosecurity.com"
+})
 @EnableConfigurationProperties(CasConfigurationProperties.class)
 @Tag("DuoSecurity")
+@Execution(ExecutionMode.SAME_THREAD)
 class DuoSecurityDetermineUserAccountActionTests extends BaseCasWebflowMultifactorAuthenticationTests {
 
     @Autowired
     @Qualifier("determineDuoUserAccountAction")
     private Action determineDuoUserAccountAction;
 
-    @SneakyThrows
-    private RequestContext verifyOperation(final DuoSecurityUserAccountStatus status, final String eventId) {
-        val context = new MockRequestContext();
-        val request = new MockHttpServletRequest();
-        val response = new MockHttpServletResponse();
-        context.setExternalContext(new ServletExternalContext(new MockServletContext(), request, response));
+    @Autowired
+    @Qualifier("allowProvider")
+    private MultifactorAuthenticationProvider allowProvider;
+
+    @Autowired
+    @Qualifier("denyProvider")
+    private MultifactorAuthenticationProvider denyProvider;
+
+    @Autowired
+    @Qualifier("authProvider")
+    private MultifactorAuthenticationProvider authProvider;
+
+    @Autowired
+    @Qualifier("unavailableProvider")
+    private MultifactorAuthenticationProvider unavailableProvider;
+
+    @Autowired
+    @Qualifier("enrollProvider")
+    private MultifactorAuthenticationProvider enrollProvider;
+
+    private RequestContext verifyOperation(final MultifactorAuthenticationProvider provider, final String eventId) throws Exception {
+        val context = MockRequestContext.create(applicationContext);
 
         WebUtils.putServiceIntoFlowScope(context, CoreAuthenticationTestUtils.getWebApplicationService());
         val authentication = CoreAuthenticationTestUtils.getAuthentication();
         WebUtils.putAuthentication(authentication, context);
 
-        val account = new DuoSecurityUserAccount(authentication.getPrincipal().getId());
-        account.setStatus(status);
-        account.setEnrollPortalUrl("https://example.org");
-
-        val duoService = mock(DuoSecurityAuthenticationService.class);
-        when(duoService.getUserAccount(anyString())).thenReturn(account);
-        val provider = mock(DuoSecurityMultifactorAuthenticationProvider.class);
-        when(provider.getId()).thenReturn(DuoSecurityMultifactorAuthenticationProperties.DEFAULT_IDENTIFIER);
-        when(provider.getDuoAuthenticationService()).thenReturn(duoService);
-
-        val registration = new DuoSecurityMultifactorAuthenticationRegistrationProperties()
-            .setRegistrationUrl("https://registration.duo.com");
-        registration.getCrypto().setEnabled(true);
-
         servicesManager.save(RegisteredServiceTestUtils.getRegisteredService("registration.duo.com"));
-        
-        when(provider.getRegistration()).thenReturn(registration);
-        when(provider.matches(anyString())).thenReturn(Boolean.TRUE);
-
-        val applicationContext = new StaticApplicationContext();
-        applicationContext.refresh();
-        ApplicationContextProvider.holdApplicationContext(applicationContext);
-        ApplicationContextProvider.registerBeanIntoApplicationContext(applicationContext,
-            MultifactorAuthenticationPrincipalResolver.identical(), UUID.randomUUID().toString());
-
         WebUtils.putMultifactorAuthenticationProvider(context, provider);
-        TestMultifactorAuthenticationProvider.registerProviderIntoApplicationContext(applicationContext, provider);
 
         val event = determineDuoUserAccountAction.execute(context);
         assertEquals(eventId, event.getId());
@@ -106,30 +92,80 @@ class DuoSecurityDetermineUserAccountActionTests extends BaseCasWebflowMultifact
     }
 
     @Test
-    void verifyOperationEnroll() throws Exception {
-        val context = verifyOperation(DuoSecurityUserAccountStatus.ENROLL, CasWebflowConstants.TRANSITION_ID_ENROLL);
+    void verifyOperationEnroll() throws Throwable {
+        val context = verifyOperation(enrollProvider, CasWebflowConstants.TRANSITION_ID_ENROLL);
         val url = context.getFlowScope().get("duoRegistrationUrl", String.class);
         assertNotNull(url);
-        assertTrue(new URIBuilder(url).getQueryParams().get(0).getName().equalsIgnoreCase("principal"));
+        assertTrue("principal".equalsIgnoreCase(new URIBuilder(url).getQueryParams().getFirst().getName()));
     }
 
     @Test
-    void verifyOperationAllow() {
-        verifyOperation(DuoSecurityUserAccountStatus.ALLOW, CasWebflowConstants.TRANSITION_ID_BYPASS);
+    void verifyOperationAllow() throws Throwable {
+        verifyOperation(allowProvider, CasWebflowConstants.TRANSITION_ID_BYPASS);
     }
 
     @Test
-    void verifyOperationDeny() {
-        verifyOperation(DuoSecurityUserAccountStatus.DENY, CasWebflowConstants.TRANSITION_ID_DENY);
+    void verifyOperationDeny() throws Throwable {
+        verifyOperation(denyProvider, CasWebflowConstants.TRANSITION_ID_DENY);
     }
 
     @Test
-    void verifyOperationUnavailable() {
-        verifyOperation(DuoSecurityUserAccountStatus.UNAVAILABLE, CasWebflowConstants.TRANSITION_ID_UNAVAILABLE);
+    void verifyOperationUnavailable() throws Throwable {
+        verifyOperation(unavailableProvider, CasWebflowConstants.TRANSITION_ID_UNAVAILABLE);
     }
 
     @Test
-    void verifyOperationAuth() {
-        verifyOperation(DuoSecurityUserAccountStatus.AUTH, CasWebflowConstants.TRANSITION_ID_SUCCESS);
+    void verifyOperationAuth() throws Throwable {
+        verifyOperation(authProvider, CasWebflowConstants.TRANSITION_ID_SUCCESS);
+    }
+
+    @TestConfiguration(value = "MultifactorTestConfiguration", proxyBeanMethods = false)
+    static class MultifactorTestConfiguration {
+        @Bean
+        public MultifactorAuthenticationProvider allowProvider() {
+            return buildProvider(DuoSecurityUserAccountStatus.ALLOW);
+        }
+
+        @Bean
+        public MultifactorAuthenticationProvider denyProvider() {
+            return buildProvider(DuoSecurityUserAccountStatus.DENY);
+        }
+
+        @Bean
+        public MultifactorAuthenticationProvider unavailableProvider() {
+            return buildProvider(DuoSecurityUserAccountStatus.UNAVAILABLE);
+        }
+
+        @Bean
+        public MultifactorAuthenticationProvider authProvider() {
+            return buildProvider(DuoSecurityUserAccountStatus.AUTH);
+        }
+
+        @Bean
+        public MultifactorAuthenticationProvider enrollProvider() {
+            return buildProvider(DuoSecurityUserAccountStatus.ENROLL);
+        }
+
+        private static DuoSecurityMultifactorAuthenticationProvider buildProvider(
+            final DuoSecurityUserAccountStatus status) {
+            val id = "mfa-%s".formatted(UUID.randomUUID().toString());
+
+            val authentication = CoreAuthenticationTestUtils.getAuthentication();
+            val provider = mock(DuoSecurityMultifactorAuthenticationProvider.class);
+            val account = new DuoSecurityUserAccount(authentication.getPrincipal().getId());
+            account.setStatus(status);
+            account.setEnrollPortalUrl("https://example.org");
+            val registration = new DuoSecurityMultifactorAuthenticationRegistrationProperties()
+                .setRegistrationUrl("https://registration.duo.com");
+            registration.getCrypto().setEnabled(true);
+            when(provider.getRegistration()).thenReturn(registration);
+
+            when(provider.matches(anyString())).thenAnswer(answer -> answer.getArgument(0, String.class).equalsIgnoreCase(id));
+            val duoService = mock(DuoSecurityAuthenticationService.class);
+            when(duoService.getUserAccount(anyString())).thenReturn(account);
+            when(provider.getId()).thenReturn(id);
+            when(provider.getDuoAuthenticationService()).thenReturn(duoService);
+            return provider;
+        }
     }
 }
