@@ -19,7 +19,7 @@ import org.springframework.web.util.UriComponentsBuilder;
 import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLContext;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 
 import static org.apereo.cas.support.inwebo.web.flow.actions.WebflowConstants.*;
 
@@ -65,8 +65,8 @@ public record InweboService(CasConfigurationProperties casProperties, InweboCons
             val count = loginSearchResult.getCount();
             response.setCount(count);
             if (count == 1) {
-                var activationStatus = loginSearchResult.getActivationStatus().get(0);
-                val userId = loginSearchResult.getId().get(0);
+                var activationStatus = loginSearchResult.getActivationStatus().getFirst();
+                val userId = loginSearchResult.getId().getFirst();
                 if (activationStatus == 1) {
                     val loginQueryResult = consoleAdmin.loginQuery(userId);
                     if ("OK".equals(loginQueryResult.getErr())) {
@@ -79,7 +79,7 @@ public record InweboService(CasConfigurationProperties casProperties, InweboCons
                     }
                 }
                 response.setUserId(userId);
-                response.setUserStatus(loginSearchResult.getStatus().get(0));
+                response.setUserStatus(loginSearchResult.getStatus().getFirst());
                 response.setActivationStatus(activationStatus);
             }
         }
@@ -178,7 +178,7 @@ public record InweboService(CasConfigurationProperties casProperties, InweboCons
      * @throws Exception the exception
      */
     JsonNode call(final String url) throws Exception {
-        val conn = (HttpURLConnection) new URL(url).openConnection();
+        val conn = (HttpURLConnection) new URI(url).toURL().openConnection();
         if (conn instanceof final HttpsURLConnection urlConnection) {
             urlConnection.setSSLSocketFactory(this.context.getSocketFactory());
         }
