@@ -5,13 +5,11 @@ import org.apereo.cas.authentication.CoreAuthenticationTestUtils;
 import org.apereo.cas.authentication.Credential;
 import org.apereo.cas.authentication.LdapPasswordSynchronizationAuthenticationPostProcessor;
 import org.apereo.cas.util.junit.EnabledIfListeningOnPort;
-
 import lombok.val;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.springframework.test.context.TestPropertySource;
-
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -27,10 +25,9 @@ import static org.mockito.Mockito.*;
 class LdapPasswordSynchronizationAuthenticationPostProcessorTests {
 
     @Nested
-    @SuppressWarnings("ClassCanBeStatic")
     class DefaultTests extends BaseLdapPasswordSynchronizationTests {
         @Test
-        void verifySyncFindsNoUser() {
+        void verifySyncFindsNoUser() throws Throwable {
             assertThrows(AuthenticationException.class, () -> {
                 val sync = ldapPasswordSynchronizers.first();
                 val credentials = CoreAuthenticationTestUtils.getCredentialsWithDifferentUsernameAndPassword("unknown123456", "password");
@@ -41,9 +38,9 @@ class LdapPasswordSynchronizationAuthenticationPostProcessorTests {
         }
 
         @Test
-        void verifyBadCredential() {
+        void verifyBadCredential() throws Throwable {
             assertThrows(AuthenticationException.class, () -> {
-                val sync = new LdapPasswordSynchronizationAuthenticationPostProcessor(casProperties.getAuthn().getPasswordSync().getLdap().get(0));
+                val sync = new LdapPasswordSynchronizationAuthenticationPostProcessor(casProperties.getAuthn().getPasswordSync().getLdap().getFirst());
                 val credentials = mock(Credential.class);
                 assertFalse(sync.supports(credentials));
                 sync.process(CoreAuthenticationTestUtils.getAuthenticationBuilder(),
@@ -54,14 +51,13 @@ class LdapPasswordSynchronizationAuthenticationPostProcessorTests {
     }
 
     @Nested
-    @SuppressWarnings("ClassCanBeStatic")
     @TestPropertySource(properties = {
         "cas.authn.password-sync.ldap[0].password-synchronization-failure-fatal=false",
         "cas.authn.password-sync.ldap[0].password-attribute=unicodePwd"
     })
     class UnicodeAttributeTests extends BaseLdapPasswordSynchronizationTests {
         @Test
-        void verifySyncFailsWithUnicodePswd() {
+        void verifySyncFailsWithUnicodePswd() throws Throwable {
             assertDoesNotThrow(() -> {
                 val sync = ldapPasswordSynchronizers.first();
                 val credentials = CoreAuthenticationTestUtils.getCredentialsWithDifferentUsernameAndPassword("casTest", "password");
@@ -72,11 +68,10 @@ class LdapPasswordSynchronizationAuthenticationPostProcessorTests {
     }
 
     @Nested
-    @SuppressWarnings("ClassCanBeStatic")
     @TestPropertySource(properties = "cas.authn.password-sync.ldap[0].password-attribute=st")
     class UnknownAttributeTests extends BaseLdapPasswordSynchronizationTests {
         @Test
-        void verifyOperation() {
+        void verifyOperation() throws Throwable {
             val sync = ldapPasswordSynchronizers.first();
             val credentials = CoreAuthenticationTestUtils.getCredentialsWithDifferentUsernameAndPassword("admin", "password");
             assertTrue(sync.supports(credentials));
