@@ -1,12 +1,13 @@
 package org.apereo.cas.oidc.claims;
 
 import org.apereo.cas.authentication.attribute.AttributeDefinitionStore;
-
+import org.apereo.cas.util.CollectionUtils;
+import com.google.common.base.Splitter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.jose4j.jwt.JwtClaims;
-
+import java.util.HashMap;
 import java.util.List;
 
 /**
@@ -18,17 +19,35 @@ import java.util.List;
 @RequiredArgsConstructor
 @Slf4j
 public class OidcSimpleIdTokenClaimCollector implements OidcIdTokenClaimCollector {
-    private final AttributeDefinitionStore attributeDefinitionStore;
+    protected final AttributeDefinitionStore attributeDefinitionStore;
 
     @Override
-    public void collect(final JwtClaims claims, final String name,
-                        final List<Object> values) {
+    public void collect(final JwtClaims claims, final String name, final List<Object> values) {
         if (!values.isEmpty()) {
-            val result = attributeDefinitionStore.locateAttributeDefinition(name, OidcAttributeDefinition.class);
-            val finalValue = result.map(defn -> defn.isSingleValue() && values.size() == 1 ? values.get(0) : values)
-                .orElseGet(() -> values.size() == 1 ? values.get(0) : values);
-            LOGGER.debug("Collecting ID token claim [{}] with value(s) [{}]", name, finalValue);
-            claims.setClaim(name, finalValue);
+            val result = attributeDefinitionStore.locateAttributeDefinition(name, OidcAttributeDefinition.class)
+                .or(() -> attributeDefinitionStore.locateAttributeDefinitionByName(name, OidcAttributeDefinition.class));
+            val finalValue = result.map(definition -> definition.toAttributeValue(values))
+                .orElseGet(() -> values.size() == 1 ? values.getFirst() : values);
+
+            if (result.isPresent() && result.get().isStructured() && result.get().getName().contains(".")) {
+                val claimNames = Splitter.on('.').splitToList(result.get().getName().trim());
+                val structuredClaims = new HashMap<>();
+
+                var lastClaimName = claimNames.getLast();
+                structuredClaims.put(lastClaimName, finalValue);
+
+                for (var i = claimNames.size() - 2; i >= 1; i--) {
+                    val lastClaimValue = structuredClaims.remove(lastClaimName);
+                    val currentClaimName = claimNames.get(i);
+                    structuredClaims.put(currentClaimName, CollectionUtils.wrap(lastClaimName, lastClaimValue));
+                    lastClaimName = currentClaimName;
+                }
+                LOGGER.debug("Collecting structured ID token claim [{}] with nested entries [{}]", claimNames.getFirst(), structuredClaims);
+                claims.setClaim(claimNames.getFirst(), structuredClaims);
+            } else {
+                LOGGER.debug("Collecting ID token claim [{}] with value(s) [{}]", name, finalValue);
+                claims.setClaim(name, finalValue);
+            }
         }
     }
 }
