@@ -2,9 +2,9 @@ package org.apereo.cas.okta;
 
 import org.apereo.cas.authentication.principal.PrincipalResolver;
 import org.apereo.cas.config.CasPersonDirectoryConfiguration;
+import org.apereo.cas.config.CasPersonDirectoryStubConfiguration;
 import org.apereo.cas.config.OktaPersonDirectoryConfiguration;
 import org.apereo.cas.util.spring.beans.BeanContainer;
-
 import com.okta.sdk.client.Client;
 import com.okta.sdk.resource.user.User;
 import com.okta.sdk.resource.user.UserProfile;
@@ -20,10 +20,8 @@ import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.context.annotation.Bean;
-
 import java.util.Date;
 import java.util.Map;
-
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -60,13 +58,13 @@ class OktaPersonAttributeDaoTests {
     @SpringBootTest(classes = {
         OktaPersonDirectoryConfiguration.class,
         CasPersonDirectoryConfiguration.class,
+        CasPersonDirectoryStubConfiguration.class,
         BaseOktaTests.SharedTestConfiguration.class
     }, properties = {
         "cas.authn.attribute-repository.okta.organization-url=https://dev-668371.oktapreview.com",
         "cas.authn.attribute-repository.okta.api-token=0030j4HfPHEIQG39pl0nNacnx2bqqZMqDq6Hk5wfNa"
     })
     @Nested
-    @SuppressWarnings("ClassCanBeStatic")
     class OktaPersonDirectoryConfigurationTests {
         @Autowired
         @Qualifier("oktaPersonAttributeDaos")
@@ -77,11 +75,11 @@ class OktaPersonAttributeDaoTests {
         private IPersonAttributeDao attributeRepository;
 
         @Test
-        void verifyOperation() {
+        void verifyOperation() throws Throwable {
             assertEquals(1, oktaPersonAttributeDaos.size());
             assertNull(attributeRepository.getPerson("casuser"));
 
-            val dao = (OktaPersonAttributeDao) oktaPersonAttributeDaos.toList().get(0);
+            val dao = (OktaPersonAttributeDao) oktaPersonAttributeDaos.toList().getFirst();
             assertTrue(dao.getPossibleUserAttributeNames(IPersonAttributeDaoFilter.alwaysChoose()).isEmpty());
             assertTrue(dao.getAvailableQueryAttributes(IPersonAttributeDaoFilter.alwaysChoose()).isEmpty());
             assertNotNull(dao.getOktaClient());
@@ -92,13 +90,13 @@ class OktaPersonAttributeDaoTests {
         OktaPersonAttributeDaoTests.OktaClientMockTestConfiguration.class,
         OktaPersonDirectoryConfiguration.class,
         CasPersonDirectoryConfiguration.class,
+        CasPersonDirectoryStubConfiguration.class,
         BaseOktaTests.SharedTestConfiguration.class
     }, properties = {
         "cas.authn.attribute-repository.okta.organization-url=https://dev-668371.oktapreview.com",
         "cas.authn.attribute-repository.okta.api-token=0030j4HfPHEIQG39pl0nNacnx2bqqZMqDq6Hk5wfNa"
     })
     @Nested
-    @SuppressWarnings("ClassCanBeStatic")
     class OktaPersonDirectoryMockTests {
         @Autowired
         @Qualifier("oktaPersonAttributeDaos")
@@ -109,7 +107,7 @@ class OktaPersonAttributeDaoTests {
         private IPersonAttributeDao attributeRepository;
 
         @Test
-        void verifyOperation() {
+        void verifyOperation() throws Throwable {
             assertFalse(oktaPersonAttributeDaos.toList().isEmpty());
             assertNotNull(attributeRepository.getPerson("casuser"));
             assertFalse(attributeRepository.getPeople(Map.of("username", "casuser"),
