@@ -78,13 +78,13 @@ public class SamlMetadataUIInfo extends DefaultRegisteredServiceUserInterfaceInf
      * @return the string value
      */
     private static String getLocalizedValues(final String locale, final List<?> items) {
-        val foundLocale = findLocale(StringUtils.defaultString(locale, "en"), items);
+        val foundLocale = findLocale(StringUtils.defaultIfBlank(locale, "en"), items);
         if (foundLocale.isPresent()) {
             return foundLocale.get();
         }
 
         if (!items.isEmpty()) {
-            val item = items.get(0);
+            val item = items.getFirst();
             var value = StringUtils.EMPTY;
             if (item instanceof final LocalizedName instance) {
                 value = instance.getValue();
