@@ -72,7 +72,7 @@ public class CasSimpleMultifactorAuthenticationEndpoint extends BaseCasActuatorE
         }, e -> ResponseEntity.badRequest().body("Invalid or unauthenticated request")).get();
     }
 
-    protected MultifactorAuthenticationTokenResponse generateToken(final Credential credential, final Service givenService) {
+    protected MultifactorAuthenticationTokenResponse generateToken(final Credential credential, final Service givenService) throws Throwable {
         val authnSupport = applicationContext.getBean(AuthenticationSystemSupport.BEAN_NAME, AuthenticationSystemSupport.class);
         return authnSupport.handleInitialAuthenticationTransaction(givenService, credential)
             .getInitialAuthentication()
@@ -88,10 +88,11 @@ public class CasSimpleMultifactorAuthenticationEndpoint extends BaseCasActuatorE
 
     protected Credential extractCredential(final String base64Credentials) {
         val basicAuthCredentials = Splitter.on(':').splitToList(EncodingUtils.decodeBase64ToString(base64Credentials));
-        return new UsernamePasswordCredential(basicAuthCredentials.get(0), basicAuthCredentials.get(1));
+        return new UsernamePasswordCredential(basicAuthCredentials.getFirst(), basicAuthCredentials.get(1));
     }
 
-    protected CasSimpleMultifactorAuthenticationTicket createAndStoreToken(final Service givenService, final Authentication authentication) throws Exception {
+    protected CasSimpleMultifactorAuthenticationTicket createAndStoreToken(final Service givenService,
+                                                                           final Authentication authentication) throws Throwable {
         val principal = authentication.getPrincipal();
         val mfaService = applicationContext.getBean(CasSimpleMultifactorAuthenticationService.BEAN_NAME, CasSimpleMultifactorAuthenticationService.class);
         val token = mfaService.generate(principal, givenService);
