@@ -14,13 +14,12 @@ import org.apereo.cas.support.spnego.authentication.principal.SpnegoCredential;
 
 import com.google.common.base.Splitter;
 import jcifs.spnego.Authentication;
-import lombok.Synchronized;
+import jcifs.spnego.AuthenticationException;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 
 import javax.annotation.concurrent.NotThreadSafe;
 import javax.security.auth.login.FailedLoginException;
-import java.security.GeneralSecurityException;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.BlockingQueue;
@@ -59,8 +58,7 @@ public class JcifsSpnegoAuthenticationHandler extends AbstractPreAndPostProcessi
     }
 
     @Override
-    @Synchronized
-    protected AuthenticationHandlerExecutionResult doAuthentication(final Credential credential, final Service service) throws GeneralSecurityException {
+    protected AuthenticationHandlerExecutionResult doAuthentication(final Credential credential, final Service service) throws Throwable {
         val spnegoCredential = (SpnegoCredential) credential;
         if (!this.ntlmAllowed && spnegoCredential.isNtlm()) {
             throw new FailedLoginException("NTLM not allowed");
@@ -84,7 +82,7 @@ public class JcifsSpnegoAuthenticationHandler extends AbstractPreAndPostProcessi
     }
 
     protected AuthenticationHandlerExecutionResult doInternalAuthentication(final List<Authentication> authentications,
-                             final SpnegoCredential spnegoCredential, final Service service) throws GeneralSecurityException {
+                             final SpnegoCredential spnegoCredential, final Service service) throws Throwable {
         var principal = (java.security.Principal) null;
         var nextToken = (byte[]) null;
         val it = authentications.iterator();
@@ -98,7 +96,7 @@ public class JcifsSpnegoAuthenticationHandler extends AbstractPreAndPostProcessi
                 LOGGER.debug("Authenticated SPNEGO principal [{}]. Retrieving the next token for authentication...",
                     Optional.ofNullable(principal).map(java.security.Principal::getName).orElse(null));
                 nextToken = authentication.getNextToken();
-            } catch (final jcifs.spnego.AuthenticationException e) {
+            } catch (final AuthenticationException e) {
                 LOGGER.debug("Processing SPNEGO authentication failed with exception", e);
                 throw new FailedLoginException(e.getMessage());
             }
@@ -144,7 +142,7 @@ public class JcifsSpnegoAuthenticationHandler extends AbstractPreAndPostProcessi
      * @param isNtlm the is ntlm
      * @return the simple principal
      */
-    protected Principal getPrincipal(final String name, final boolean isNtlm) {
+    protected Principal getPrincipal(final String name, final boolean isNtlm) throws Throwable {
         if (this.principalWithDomainName) {
             return this.principalFactory.createPrincipal(name);
         }
@@ -158,6 +156,6 @@ public class JcifsSpnegoAuthenticationHandler extends AbstractPreAndPostProcessi
             return this.principalFactory.createPrincipal(name);
         }
         val splitList = Splitter.on("@").splitToList(name);
-        return this.principalFactory.createPrincipal(splitList.get(0));
+        return this.principalFactory.createPrincipal(splitList.getFirst());
     }
 }
