@@ -38,7 +38,7 @@ class SurrogateAuthenticationRestHttpRequestCredentialFactoryTests {
     private CasConfigurationProperties casProperties;
 
     @Test
-    void verifyUnAuthz() {
+    void verifyUnAuthz() throws Throwable {
         val request = new MockHttpServletRequest();
         val requestBody = new LinkedMultiValueMap<String, String>();
         request.addHeader(SurrogateAuthenticationRestHttpRequestCredentialFactory.REQUEST_HEADER_SURROGATE_PRINCIPAL, "surrogate");
@@ -51,7 +51,7 @@ class SurrogateAuthenticationRestHttpRequestCredentialFactoryTests {
     }
 
     @Test
-    void verifyOperationByHeader() {
+    void verifyOperationByHeader() throws Throwable {
         val request = new MockHttpServletRequest();
         val requestBody = new LinkedMultiValueMap<String, String>();
         request.addHeader(SurrogateAuthenticationRestHttpRequestCredentialFactory.REQUEST_HEADER_SURROGATE_PRINCIPAL, "surrogate");
@@ -63,14 +63,14 @@ class SurrogateAuthenticationRestHttpRequestCredentialFactoryTests {
         assertTrue(factory.getOrder() > 0);
         val results = factory.fromRequest(request, requestBody);
         assertFalse(results.isEmpty());
-        val credential = results.get(0);
+        val credential = results.getFirst();
         assertNotNull(credential);
         assertEquals("surrogate", credential.getCredentialMetadata().getTrait(SurrogateCredentialTrait.class).get().getSurrogateUsername());
         assertEquals("test", credential.getId());
     }
 
     @Test
-    void verifyEmptyCreds() {
+    void verifyEmptyCreds() throws Throwable {
         val request = new MockHttpServletRequest();
         val requestBody = new LinkedMultiValueMap<String, String>();
         val service = new SimpleSurrogateAuthenticationService(Map.of("test", List.of("surrogate")), mock(ServicesManager.class));
@@ -79,7 +79,7 @@ class SurrogateAuthenticationRestHttpRequestCredentialFactoryTests {
     }
 
     @Test
-    void verifyOperationByCredentialSeparator() {
+    void verifyOperationByCredentialSeparator() throws Throwable {
         val request = new MockHttpServletRequest();
         val requestBody = new LinkedMultiValueMap<String, String>();
         requestBody.add("username", "surrogate+test");
@@ -89,14 +89,14 @@ class SurrogateAuthenticationRestHttpRequestCredentialFactoryTests {
         val factory = new SurrogateAuthenticationRestHttpRequestCredentialFactory(service, casProperties.getAuthn().getSurrogate());
         val results = factory.fromRequest(request, requestBody);
         assertFalse(results.isEmpty());
-        val credential = results.get(0);
+        val credential = results.getFirst();
         assertNotNull(credential);
         assertEquals("surrogate", credential.getCredentialMetadata().getTrait(SurrogateCredentialTrait.class).get().getSurrogateUsername());
         assertEquals("test", credential.getId());
     }
 
     @Test
-    void verifyBasicUsernamePasswordOperationWithoutSurrogatePrincipal() {
+    void verifyBasicUsernamePasswordOperationWithoutSurrogatePrincipal() throws Throwable {
         val request = new MockHttpServletRequest();
         val requestBody = new LinkedMultiValueMap<String, String>();
         requestBody.add("username", "test");
@@ -106,7 +106,7 @@ class SurrogateAuthenticationRestHttpRequestCredentialFactoryTests {
         val factory = new SurrogateAuthenticationRestHttpRequestCredentialFactory(service, casProperties.getAuthn().getSurrogate());
         val results = factory.fromRequest(request, requestBody);
         assertFalse(results.isEmpty());
-        val credential = results.get(0);
+        val credential = results.getFirst();
         assertNotNull(credential);
         assertTrue(credential.getCredentialMetadata().getTrait(SurrogateCredentialTrait.class).isEmpty());
         assertEquals("test", credential.getId());
