@@ -6,8 +6,8 @@ import org.apereo.cas.services.RegisteredServiceProperty;
 import org.apereo.cas.services.RegisteredServiceTestUtils;
 import org.apereo.cas.services.UnauthorizedServiceException;
 import org.apereo.cas.support.wsfederation.AbstractWsFederationTests;
-import org.apereo.cas.util.HttpRequestUtils;
-
+import org.apereo.cas.util.MockRequestContext;
+import org.apereo.cas.util.http.HttpRequestUtils;
 import lombok.val;
 import org.apereo.inspektr.common.web.ClientInfo;
 import org.apereo.inspektr.common.web.ClientInfoHolder;
@@ -15,18 +15,9 @@ import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.mock.web.MockHttpServletRequest;
-import org.springframework.mock.web.MockHttpServletResponse;
-import org.springframework.mock.web.MockServletContext;
 import org.springframework.web.servlet.view.RedirectView;
-import org.springframework.webflow.context.ExternalContextHolder;
-import org.springframework.webflow.context.servlet.ServletExternalContext;
-import org.springframework.webflow.execution.RequestContextHolder;
-import org.springframework.webflow.test.MockRequestContext;
-
 import java.util.Map;
 import java.util.UUID;
-
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
@@ -43,43 +34,34 @@ class WsFederationNavigationControllerTests extends AbstractWsFederationTests {
     private WsFederationNavigationController wsFederationNavigationController;
 
     @Test
-    void verifyOperation() {
-        val context = new MockRequestContext();
-        val request = new MockHttpServletRequest();
-        val response = new MockHttpServletResponse();
-        context.setExternalContext(new ServletExternalContext(new MockServletContext(), request, response));
-        RequestContextHolder.setRequestContext(context);
-        ExternalContextHolder.setExternalContext(context.getExternalContext());
+    void verifyOperation() throws Throwable {
+        val context = MockRequestContext.create();
 
-        request.setRemoteAddr("185.86.151.11");
-        request.setLocalAddr("185.88.151.11");
-        request.addHeader(HttpRequestUtils.USER_AGENT_HEADER, "Mozilla/5.0 (Windows NT 10.0; WOW64)");
-        ClientInfoHolder.setClientInfo(ClientInfo.from(request));
+        context.getHttpServletRequest().setRemoteAddr("185.86.151.11");
+        context.getHttpServletRequest().setLocalAddr("185.88.151.11");
+        context.getHttpServletRequest().addHeader(HttpRequestUtils.USER_AGENT_HEADER, "Mozilla/5.0 (Windows NT 10.0; WOW64)");
+        ClientInfoHolder.setClientInfo(ClientInfo.from(context.getHttpServletRequest()));
 
-        val config = wsFederationConfigurations.toList().get(0);
+        val config = wsFederationConfigurations.toList().getFirst();
         val registeredService = RegisteredServiceTestUtils.getRegisteredService("https://wsfedservice");
         registeredService.setProperties(Map.of(RegisteredServiceProperty.RegisteredServiceProperties.WSFED_RELYING_PARTY_ID.getPropertyName(),
             new DefaultRegisteredServiceProperty(config.getRelyingPartyIdentifier())));
         val service = RegisteredServiceTestUtils.getService(registeredService.getServiceId());
         servicesManager.save(registeredService);
 
-        request.addParameter(CasProtocolConstants.PARAMETER_SERVICE, service.getId());
+        context.setParameter(CasProtocolConstants.PARAMETER_SERVICE, service.getId());
         val id = config.getId();
-        request.addParameter(WsFederationNavigationController.PARAMETER_NAME, id);
-        val view = wsFederationNavigationController.redirectToProvider(request, response);
+        context.setParameter(WsFederationNavigationController.PARAMETER_NAME, id);
+        val view = wsFederationNavigationController.redirectToProvider(context.getHttpServletRequest(), context.getHttpServletResponse());
         assertTrue(view instanceof RedirectView);
     }
 
     @Test
-    void verifyMissingId() {
-        val context = new MockRequestContext();
-        val request = new MockHttpServletRequest();
-        val response = new MockHttpServletResponse();
-        context.setExternalContext(new ServletExternalContext(new MockServletContext(), request, response));
-        RequestContextHolder.setRequestContext(context);
-        ExternalContextHolder.setExternalContext(context.getExternalContext());
+    void verifyMissingId() throws Throwable {
+        val context = MockRequestContext.create();
 
-        request.addParameter(WsFederationNavigationController.PARAMETER_NAME, UUID.randomUUID().toString());
-        assertThrows(UnauthorizedServiceException.class, () -> wsFederationNavigationController.redirectToProvider(request, response));
+        context.setParameter(WsFederationNavigationController.PARAMETER_NAME, UUID.randomUUID().toString());
+        assertThrows(UnauthorizedServiceException.class,
+            () -> wsFederationNavigationController.redirectToProvider(context.getHttpServletRequest(), context.getHttpServletResponse()));
     }
 }
